@@ -225,6 +225,8 @@ endif
 	$(INSTALL_FILE) $(LANGUAGE_DIR)pl/wxDFast.mo $(DESTDIR)/usr/share/locale/hu/LC_MESSAGES
 	$(INSTALL_DIR) $(DESTDIR)/usr/share/locale/id/LC_MESSAGES
 	$(INSTALL_FILE) $(LANGUAGE_DIR)id/wxDFast.mo $(DESTDIR)/usr/share/locale/id/LC_MESSAGES
+	$(INSTALL_DIR) $(DESTDIR)/usr/share/locale/nl/LC_MESSAGES
+	$(INSTALL_FILE) $(LANGUAGE_DIR)nl/wxDFast.mo $(DESTDIR)/usr/share/locale/nl/LC_MESSAGES
 #	$(INSTALL_DIR) $(DESTDIR)/usr/share/locale/hy/LC_MESSAGES
 #	$(INSTALL_FILE) $(LANGUAGE_DIR)hy/wxDFast.mo $(DESTDIR)/usr/share/locale/hy/LC_MESSAGES
 	$(INSTALL_DIR) $(DESTDIR)/usr/share/man/man1
@@ -282,6 +284,7 @@ endif
 	rm -f $(DESTDIR)/usr/share/locale/hu/LC_MESSAGES/wxDFast.mo
 	rm -f $(DESTDIR)/usr/share/locale/pl/LC_MESSAGES/wxDFast.mo
 	rm -f $(DESTDIR)/usr/share/locale/id/LC_MESSAGES/wxDFast.mo
+	rm -f $(DESTDIR)/usr/share/locale/nl/LC_MESSAGES/wxDFast.mo
 #	rm -f $(DESTDIR)/usr/share/locale/hy/LC_MESSAGES/wxDFast.mo
 	rm -f $(DESTDIR)/usr/share/man/man1/wxdfast.1.gz
 	rm -f $(DESTDIR)/usr/share/man/pt/man1/wxdfast.1.gz
@@ -335,6 +338,9 @@ source:
 	mkdir $(BIN)-$(VERSION)/$(LANGUAGE_DIR)id
 	cp $(LANGUAGE_DIR)id/wxDFast.* $(BIN)-$(VERSION)/$(LANGUAGE_DIR)id
 	cp $(LANGUAGE_DIR)id/Makefile.am $(BIN)-$(VERSION)/$(LANGUAGE_DIR)id
+	mkdir $(BIN)-$(VERSION)/$(LANGUAGE_DIR)nl
+	cp $(LANGUAGE_DIR)nl/wxDFast.* $(BIN)-$(VERSION)/$(LANGUAGE_DIR)nl
+	cp $(LANGUAGE_DIR)nl/Makefile.am $(BIN)-$(VERSION)/$(LANGUAGE_DIR)nl
 #	mkdir $(BIN)-$(VERSION)/$(LANGUAGE_DIR)hy
 #	cp $(LANGUAGE_DIR)hy/wxDFast.* $(BIN)-$(VERSION)/$(LANGUAGE_DIR)hy
 #	cp $(LANGUAGE_DIR)hy/Makefile.am $(BIN)-$(VERSION)/$(LANGUAGE_DIR)hy
