@@ -1,3 +1,3 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = de es fr hu id pl pt_BR cs ru tr
+SUBDIRS = de es fr hu id pl pt_BR nl cs ru tr
