@@ -3,6 +3,7 @@
 - Added Turkish language(by E.B)
 - Added Indonesian language(by Arif Rahman)
 - Added French language(by lord_nogard)
+- Added Dutch language(by Rob van den Boorn)
 - Now the download list is updated just when a
   download is changed, making the program faster,
   and preventing the program to be blocked when
